// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CostUsageReports Construct Testing CostUsageReport Construct Normal(all arguments) Testing Should match snapshot: report-timezone 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DailyCostUsageReporterCostReporterFunction100AA295": {
      "DependsOn": [
        "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "HASH.zip",
        },
        "Description": "A function to archive logs s3 bucket from CloudWatch Logs.",
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "SLACK_CHANNEL": "example-channel",
            "SLACK_TOKEN": "xoxb-11111111111-XXXXXXXXXXXXX-XXXXXXXXXXXXXXXXXXXXXXXX",
          },
        },
        "FunctionName": "cost-report-d83e5229-func",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Timeout": 45,
      },
      "Type": "AWS::Lambda::Function",
    },
    "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ce:GetCostAndUsage",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "get-cost-usage",
          },
        ],
        "RoleName": "cost-report-lambda-exec-d83e5229-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "DailyCostUsageReporterSchedule211E3EDE": {
      "Properties": {
        "Description": "aws account 123456789012 const reports.",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "Name": "daily-cost-report-123456789012-schedule",
        "ScheduleExpression": "cron(1 9 * * ? *)",
        "ScheduleExpressionTimezone": "Asia/Tokyo",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "DailyCostUsageReporterCostReporterFunction100AA295",
              "Arn",
            ],
          },
          "Input": "{"Type":"Services"}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "DailyCostUsageReporterSchedulerExecutionRole8D20F239",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "DailyCostUsageReporterSchedulerExecutionRole8D20F239": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "lambda:InvokeFunction",
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "DailyCostUsageReporterCostReporterFunction100AA295",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "DailyCostUsageReporterCostReporterFunction100AA295",
                              "Arn",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "lambda-invoke-policy",
          },
        ],
        "RoleName": "daily-cost-report-schedule-d83e5229-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`CostUsageReports Construct Testing CostUsageReport Construct Normal(only required arguments) Testing Should match snapshot: report 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "DailyCostUsageReporterCostReporterFunction100AA295": {
      "DependsOn": [
        "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": "cdk-hnb659fds-assets-123456789012-us-east-1",
          "S3Key": "HASH.zip",
        },
        "Description": "A function to archive logs s3 bucket from CloudWatch Logs.",
        "Environment": {
          "Variables": {
            "AWS_NODEJS_CONNECTION_REUSE_ENABLED": "1",
            "SLACK_CHANNEL": "example-channel",
            "SLACK_TOKEN": "xoxb-11111111111-XXXXXXXXXXXXX-XXXXXXXXXXXXXXXXXXXXXXXX",
          },
        },
        "FunctionName": "cost-report-d83e5229-func",
        "Handler": "index.handler",
        "Role": {
          "Fn::GetAtt": [
            "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32",
            "Arn",
          ],
        },
        "Runtime": "nodejs20.x",
        "Timeout": 45,
      },
      "Type": "AWS::Lambda::Function",
    },
    "DailyCostUsageReporterLambdaExecutionRoleE9CFFB32": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "ce:GetCostAndUsage",
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "get-cost-usage",
          },
        ],
        "RoleName": "cost-report-lambda-exec-d83e5229-role",
      },
      "Type": "AWS::IAM::Role",
    },
    "DailyCostUsageReporterSchedule211E3EDE": {
      "Properties": {
        "Description": "aws account 123456789012 const reports.",
        "FlexibleTimeWindow": {
          "Mode": "OFF",
        },
        "Name": "daily-cost-report-123456789012-schedule",
        "ScheduleExpression": "cron(1 9 * * ? *)",
        "ScheduleExpressionTimezone": "UTC",
        "State": "ENABLED",
        "Target": {
          "Arn": {
            "Fn::GetAtt": [
              "DailyCostUsageReporterCostReporterFunction100AA295",
              "Arn",
            ],
          },
          "Input": "{"Type":"Services"}",
          "RetryPolicy": {
            "MaximumEventAgeInSeconds": 60,
            "MaximumRetryAttempts": 0,
          },
          "RoleArn": {
            "Fn::GetAtt": [
              "DailyCostUsageReporterSchedulerExecutionRole8D20F239",
              "Arn",
            ],
          },
        },
      },
      "Type": "AWS::Scheduler::Schedule",
    },
    "DailyCostUsageReporterSchedulerExecutionRole8D20F239": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "scheduler.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": "lambda:InvokeFunction",
                  "Effect": "Allow",
                  "Resource": [
                    {
                      "Fn::GetAtt": [
                        "DailyCostUsageReporterCostReporterFunction100AA295",
                        "Arn",
                      ],
                    },
                    {
                      "Fn::Join": [
                        "",
                        [
                          {
                            "Fn::GetAtt": [
                              "DailyCostUsageReporterCostReporterFunction100AA295",
                              "Arn",
                            ],
                          },
                          ":*",
                        ],
                      ],
                    },
                  ],
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "lambda-invoke-policy",
          },
        ],
        "RoleName": "daily-cost-report-schedule-d83e5229-exec-role",
      },
      "Type": "AWS::IAM::Role",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
